--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ install:
 - sudo apt-get update
 - sudo apt-get install subversion g++ zlib1g-dev build-essential git python python3 python3-distutils libncurses5-dev gawk gettext unzip file libssl-dev wget libelf-dev ecj fastjar java-propose-classpath
 script:
-- bash -c './scripts/feeds update -a'
-- bash -c './scripts/feeds install -a'
+- scripts/feeds update -a
+- scripts/feeds install -a
 - echo 'CONFIG_TARGET_octeon=y' > .config
 - echo 'CONFIG_TARGET_octeon_DEVICE_ubnt_unifi-security-gateway-3p=y' >> .config
 - echo 'CONFIG_PACKAGE_luci=m' >> .config
 - make defconfig
-- make || make -j1 V=s
+- travis_wait 30 make || make -j1 V=s
 - sed -i /bin/d .gitignore 
 deploy:
   provider: pages:git
